# vad

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
develop/: develop.md
docs/: README.md
docs/en/: README.md  aishell4-benchmark.md  algorithm.md  api.md  research.md  tools.md  tuning.md
docs/zh/: README.md  aishell4-benchmark.md  algorithm.md  api.md  research.md  tools.md  tuning.md
examples/: basic_usage.py  benchmark.py
native/: vad_core.cpp
src/openvad/: __init__.py  api.py  cli.py  io.py  types.py
tests/: test_vad.py
tests/data/: README.md
tests/data/pcm/: 16k_en.pcm  16k_jp.pcm  16k_zn.pcm
tests/reports/: 16k_en.vad.html  16k_jp.vad.html  16k_zn.vad.html  summary.json
tools/: _common.py  aishell4_prepare.py  batch_inspect.py  evaluate_dataset.py  inspect_file.py  make_synthetic_dataset.py  sweep_thresholds.py
