[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "openvad"
version = "0.1.0"
description = "Fast adaptive voice activity detection with a C++ core and Python API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "openvad contributors" }]
keywords = ["vad", "voice-activity-detection", "audio", "speech"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "build>=1"]

[project.scripts]
openvad = "openvad.cli:main"

[project.urls]
Homepage = "https://github.com/openvad/openvad"
Repository = "https://github.com/openvad/openvad"
Issues = "https://github.com/openvad/openvad/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openvad = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
